--- a/mandelbulber2/formula/ui/mandelbulb_iq_v2.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_iq_v2.ui
@@ -379,7 +379,7 @@ based on code by Inigo Quilez</string>
 &lt;tr&gt;&lt;th&gt;Reference&lt;/th&gt;&lt;td&gt;&lt;a href=&quot;https://www.iquilezles.org/www/articles/mandelbulb/mandelbulb.htm&quot;&gt;https://www.iquilezles.org/www/articles/mandelbulb/mandelbulb.htm&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mandelbulbIqV2.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mandelbulbIqV2.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mandelnest4D IQbulbV2.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
