--- a/mandelbulber2/formula/ui/menger_octo.ui
+++ b/mandelbulber2/formula/ui/menger_octo.ui
@@ -1957,7 +1957,7 @@ offset:</string>
         <property name="text">
          <string notr="true">&lt;p&gt;Menger Sponge and octo&lt;br&gt;from code by Knighty&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;menger octo 001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;menger octo 001.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/transfSinCos_mengOcto.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
