--- a/mandelbulber2/formula/ui/transf_difs_box_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_box_v2.ui
@@ -596,7 +596,7 @@
   &lt;span style=&quot;color:#2929cc&quot;&gt;/*  if (!fractal-&amp;gt;transformCommon.functionEnabledEFalse)&lt;/span&gt;
 &lt;span style=&quot;color:#2929cc&quot;&gt;      aux.dist = min(aux.dist, zcd / (aux.DE + 1.0));&lt;/span&gt;
 &lt;span style=&quot;color:#2929cc&quot;&gt;    else&lt;/span&gt;
-&lt;span style=&quot;color:#2929cc&quot;&gt;      aux.dist = min(aux.dist, zcd / (aux.DE + 1.0)) - fractal-&amp;gt;transformCommon.offsetB0;&lt;/span&gt;
+&lt;span style=&quot;color:#2929cc&quot;&gt;      aux.dist = min(aux.dist, zcd / (aux.DE + 1.0) - fractal-&amp;gt;transformCommon.offsetB0);&lt;/span&gt;
 &lt;span style=&quot;color:#2929cc&quot;&gt;  }*/&lt;/span&gt;
 &lt;span style=&quot;color:#676767&quot;&gt;}&lt;/span&gt;
 &lt;/pre&gt;
