--- a/mandelbulber2/formula/ui/mandelbulb_sin_cos_v2.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_sin_cos_v2.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mandelbulb_sin_cos_v2</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>817</width>
-    <height>2104</height>
+    <width>835</width>
+    <height>3027</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -50,6 +50,9 @@
      </item>
      <item row="1" column="1" rowspan="2">
       <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_1">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -1292,6 +1295,22 @@ multiply:</string>
     <hint type="destinationlabel">
      <x>101</x>
      <y>41</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledB_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinbox_transf_scale_1</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>67</x>
+     <y>53</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>183</x>
+     <y>60</y>
     </hint>
    </hints>
   </connection>
